# docs/swagger.json
@@ -473,7 +473,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/result.FindProductWithIngredientsResult"
+                                "$ref": "#/definitions/response.FindProductWithIngredients"
                             }
                         }
                     },
@@ -576,7 +576,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/result.FindProductWithIngredientsResult"
+                                "$ref": "#/definitions/response.FindProductWithIngredients"
                             }
                         }
                     },
@@ -609,26 +609,6 @@
         }
     },
     "definitions": {
-        "read.FindIngredientQueryResult": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                },
-                "type": {
-                    "type": "string"
-                }
-            }
-        },
         "request.CreateCustomer": {
             "type": "object",
             "properties": {
@@ -691,14 +671,14 @@
         "request.CreateOrderProducts": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "string"
-                },
                 "ingredients": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/request.CreateOrderIngredient"
                     }
+                },
+                "number": {
+                    "type": "integer"
                 },
                 "quantity": {
                     "type": "integer"
@@ -762,6 +742,49 @@
                 }
             }
         },
+        "response.FindProductWithIngredients": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "imgPath": {
+                    "type": "string"
+                },
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.FindProductsIngredients"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.FindProductsIngredients": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "response.IngredientCreatedResponse": {
             "type": "object",
             "properties": {
@@ -784,6 +807,40 @@
                 }
             }
         },
+        "response.ListOrderProducts": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.ListOrderProductsIngredients"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.ListOrderProductsIngredients": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "response.ListOrderResponse": {
             "type": "object",
             "properties": {
@@ -798,6 +855,12 @@
                 },
                 "orderId": {
                     "type": "string"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.ListOrderProducts"
+                    }
                 },
                 "status": {
                     "type": "string"
@@ -865,47 +928,6 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
-                }
-            }
-        },
-        "result.FindProductWithIngredientsResult": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "category": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "imgPath": {
-                    "type": "string"
-                },
-                "ingredients": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/read.FindIngredientQueryResult"
-                    }
-                },
-                "menu": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "number": {
-                    "type": "integer"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
